<resources>
    <string name="app_name">Building Management</string>
    <string name="action_about_us">About Us</string>
    <string name="title_activity_add_tenant">Add Tenant Details</string>
    <string name="title_error_radio_button">Please select an appropriate problem rating</string>
    <string name="hint_name">Name of Owner/Person Responsible</string>
    <string name="hint_id_number">Id Number</string>
    <string name="hint_number_occupants">Number Of Occupants</string>
    <string name="hint_phone_number">Contact Number</string>
    <string name="hint_emergency_contact">Emergency Contact Number</string>
    <string name="hint_flat_number">Flat Number</string>
    <string name="title_submit">Submit</string>
    <string name="title_activity_update_tenant">Update Tenant Details</string>
    <string name="title_activity_update_successful">Tenant Updated</string>
    <string name="title_activity_update_unsuccessful">unable to update Tenant</string>
    <string name="title_activity_delete_tenant">Delete Tenant Information</string>
    <string name="title_activity_show_tenant">Show Tenant Details</string>
    <string name="title_activity_add_incident">Add Incident</string>
    <string name="title_activity_show_incidents">All Incident Details</string>
    <string name="title_activity_about_us">About Us</string>
    <string name="title_activity_send_sms">Send Sms</string>
    <string name="title_add_description">Incident Description</string>
    <string name="title_tenant_id">Id Number</string>
    <string name="title_date">Tap here to Select Date</string>
    <string name="title_time">Tap here to Select time</string>
    <string name="title_show_incidents">Show Incidents</string>
    <string name="title_error_incidents_description">Please Enter Incident Description</string>
    <string name="title_error_tenant_incident_id">Please Enter Tenant Id Number</string>
    <string name="title_error_id_digits">Id Number must be 11 Digits</string>
    <string name="title_error_date">Please Click the Date button</string>
    <string name="title_error_time">Please Click the Time button</string>
    <string name="title_incident_added">Incident Added Successfully</string>
    <string name="title_incident_unsuccessful">Incident Could not be Added</string>
    <string name="title_tenant_unsuccessful">Add Unsuccessful</string>
    <string name="title_tenant_added">Add Successful</string>
    <string name="title_tenant_deleted">Tenant Deleted Successfully</string>
    <string name="title_error_not_deleted">Tenant Deleted Unsuccessfully.Please make sure Id Number is Correct</string>
    <string name="title_dlt_tenant_id">Enter Tenant Id Number to Delete</string>
    <string name="title_delete">Delete</string>
    <string name="title_sms_enter_text">Please Enter the specified text in both fields</string>
    <string name="title_cell_number_length">Cell Number must be 10 digits</string>
    <string name="title_sms_sent">Message Sent</string>
    <string name="title_cell_number">Cell Number</string>
    <string name="title_sms_message">Type Message…</string>
    <string name="title_send_sms_message">Send</string>
    <string name="title_id">Enter Tenant Id Number</string>
    <string name="title_search">Search</string>
    <string name="title_name">Name of Owner/Tenant</string>
    <string name="title_occupants">Number of Occupants</string>
    <string name="title_contact_number">Contact Number</string>
    <string name="title_emergency_contact">Emergency Contact</string>
    <string name="title_flat_number">Flat Number</string>
    <string name="title_update">Update</string>
    <string name="action_help">Help</string>
    <string name="title_activity_help">Help</string>
    <string name="title_radio_button_major">Major Problem</string>
    <string name="title_radio_button_minor">Minor Problem</string>
    <string name="title_null_error">Please Make Sure all fields are entered</string>
    <string name="title_error_id_not_found">Id Could not be Found. Tenant does not Exist</string>
</resources>
