<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.moodley.duran.prjbuildingmanagement.SendSms"
    tools:showIn="@layout/activity_send_sms"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="@color/colorMyBackground">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/edtPhoneNumber"
        android:layout_gravity="center_horizontal"
        android:hint="@string/title_cell_number" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/edtMessage"
        android:hint="@string/title_sms_message"
        android:layout_weight="0.35"
        android:gravity="top" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_send_sms_message"
        android:id="@+id/btnSend"
        android:layout_gravity="center_horizontal"
        android:onClick="sendSmsButtonClick"/>
</LinearLayout>
